--- a/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
+++ b/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "6XvK8NrtoIXiBv9Z7gscYD",
-    "name" : "Versioned Mapping - Rename",
+    "name" : "Versioned Mapping - Rename renamed",
     "type" : "DTEMPLATE",
     "metadata" : {
       "modelVersion" : {
@@ -23,6 +23,6 @@
     }
   },
   "dataFileExtension" : "zip",
-  "updateTime" : "2023-09-07T02:03:13.129Z",
+  "updateTime" : "2023-09-07T02:04:04.658Z",
   "objectRefs" : [ ]
 }
