--- a/Explore/Versioned_Project/.Versioned_Project.Project.json
+++ b/Explore/Versioned_Project/.Versioned_Project.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "61YyaMSUil1iSCU2xaV9oL",
-    "name" : "Versioned_Project_Renamed",
+    "name" : "Versioned_Project",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-09-07T02:04:33.045Z",
+  "updateTime" : "2023-09-07T02:04:38.244Z",
   "objectRefs" : [ ]
 }
