--- a/Explore/Empty_Project_Renamed/.Empty_Project_Renamed.Project.json
+++ b/Explore/Empty_Project_Renamed/.Empty_Project_Renamed.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "a0MNofFXRqMhhBDhD4Oq0v",
-    "name" : "Project_To_Be_Renamed",
+    "name" : "Empty_Project_Renamed",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-09-07T02:05:27.206Z",
+  "updateTime" : "2023-09-07T02:05:30.139Z",
   "objectRefs" : [ ]
 }
